@@ -1,4 +1,8 @@
-﻿2007-02-25  Rogier Polak  <rogier.l.a.polak@gmail.com>
+﻿2007-02-25  Bjørn Lindeijer  <bjorn@lindeijer.nl>
+
+	* src/CMakeLists.txt: Updated CMake file.
+
+2007-02-25  Rogier Polak  <rogier.l.a.polak@gmail.com>
 
 	* src/main.h, src/main.cpp, src/game.h, src/game.cpp,
 	src/gui/char_select.cpp, src/net/charserverhandler.cpp: Fixed small
